--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon server/index.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.3.6"
